# winter-test-service

./: .gitignore  README.md  pyproject.toml  wts_logging.py
api/app/: __main__.py  deps.py  main.py  schemas.py
api/app/services/: __init__.py  item_service.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
worker/: main.py
wts_messaging/domain/: errors.py
wts_messaging/internal/: amqp_publisher.py  connection.py
wts_messaging/publishers/: heartbeat_publisher.py
wts_persistence/: __init__.py
wts_persistence/domain/: __init__.py  errors.py  item.py
wts_persistence/internal/: __init__.py  engine.py  entities.py  item_repository.py
wts_persistence/repositories/: __init__.py  item_repository.py
